# dlpno_ccsdt_q

./: .gitignore  CMakeLists.txt  Makefile  __init__.py  ammonia.in  ammonia.out  cmake_install.cmake  delinquent.out  doc.rst  ein.out  hcno.in  hcno.out  hcno_tz.in  hcno_tz.out  output.err  output.out  plugin.cc  pymodule.py  ref_val.txt  tight.einsums  tight.in  tight.out  water_dimer.eintime  water_dimer.in  water_dimer.out  water_dimer.ref  water_dimer.time  water_dimer_timings.out  water_monoA.in  water_monoA.out  water_monoB.in  water_monoB.out
